# Platter

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  ACCESSIBILITY.md  API.md  BUILD_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  DOCS_RESTRUCTURE.md  README.md  SECURITY.md  SETUP.md  STORAGE_ARCHITECTURE.md  build.rs  deny.toml
.cargo/: config.toml
.github/hooks/: commit-msg
.github/workflows/: README.md  ci.yml  release.yml  security.yml
config/: admin.toml.example  settings.toml  validation.toml
data/: menu_presets.json  menu_schedules.json  notices.json
docs/: README.md
docs/accessibility/: README.md
docs/api/: README.md  reference.md
docs/architecture/: README.md  design.md  security.md
docs/deployment/: README.md  docker.md  production.md
docs/development/: README.md  branch-protection.md  contributing.md  git-hooks.md  git-workflow.md  merge-strategies.md  setup.md  testing.md
docs/guides/: README.md  build-optimization.md  configuration.md  getting-started.md  oauth-setup.md
docs/troubleshooting/: README.md  oauth.md
scripts/: create-release-tags.sh  setup-hooks.sh  setup.sh
src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  scheduler.rs  storage.rs  storage_v2.rs
src/accessibility/: aria_validator.rs  color_contrast.rs  error_types.rs  form_validator.rs  mod.rs  semantic_validator.rs  template_analyzer.rs  validators.rs
static/css/: style.css
templates/admin/: dashboard.html  login.html
tests/: accessibility_validation.rs
