[package]
name = "platter"
version = "0.8.0"
edition = "2024"
description = "A modern, secure, and efficient web application for managing dining operations, built with Rust and Actix-web"
license = "AGPL-3.0-only"
repository = "https://github.com/Ruthin-School/Platter"
homepage = "https://github.com/Ruthin-School/Platter"
documentation = "https://github.com/Ruthin-School/Platter/blob/main/API.md"
readme = "README.md"
keywords = ["web", "dashboard", "management", "dining", "menu"]
categories = ["web-programming", "database-implementations"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "API.md",
    "DESIGN.md",
    "DEVELOPMENT.md",
    "DEPLOYMENT.md",
    "SECURITY.md",
]

[dependencies]
serde = { version = "1.0.226", features = ["derive"], default-features = false }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
toml = { version = "0.9.7", default-features = false, features = ["parse", "display", "serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"], default-features = false }
thiserror = { version = "2.0.16", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "cookies"] }
actix-rt = { version = "2.11.0", default-features = false }
actix-files = { version = "0.6.8", default-features = false }
actix-session = { version = "0.11.0", features = ["cookie-session"], default-features = false }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
tera = { version = "1.20.0", default-features = false }
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
actix-cors = { version = "0.7.1", default-features = false }
# Optimized tokio - only include what we actually need
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"], default-features = false }
log = { version = "0.4.28", default-features = false }
urlencoding = { version = "2.1", default-features = false }
regex = { version = "1.11", default-features = false, features = ["std", "perf"] }

[features]
default = []
# Enable compile-time accessibility validation
validate-a11y = []

[lib]
name = "platter"
path = "src/lib.rs"

[[bin]]
name = "platter"
path = "src/main.rs"

[[bin]]
name = "a11y-check"
path = "src/bin/a11y-check.rs"

# Optimized build profiles for faster compilation
[profile.dev]
# Optimize dependencies even in dev builds for faster runtime
opt-level = 1
# Enable incremental compilation (default, but explicit)
incremental = true
# Reduce debug info for faster linking
debug = 1
# Split debuginfo to speed up builds
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Optimize all dependencies with level 2 for better runtime performance
opt-level = 2

[profile.release]
# Full optimizations for production
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Reduce binary size
panic = "abort"

# Fast build profile for CI/testing
[profile.ci]
inherits = "dev"
opt-level = 0
debug = false
incremental = false